@@ -1,5 +1,6 @@
 package Trainer;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -7,37 +8,33 @@ import java.util.List;
  * Diese kann über Getter abgefragt werden.
  */
 public class TrainerModel {
-
-    // Beispiel-Vokabelliste (20 Begriffe)
-    private final List<String> vocabelList = List.of(
-            "apple", "banana", "cherry", "date", "eggplant",
-            "fig", "grape", "honeydew", "iceberg", "jackfruit",
-            "kiwi", "lemon", "mango", "nectarine", "orange",
-            "peach", "quince", "raspberry", "strawberry", "tomato"
+    private final List<String> vocabEnglish = Arrays.asList(
+            "apple", "banana", "house", "car", "computer",
+            "book", "pen", "school", "teacher", "student",
+            "chair", "table", "window", "door", "phone",
+            "dog", "cat", "mouse", "bird", "fish",
+            "water", "milk", "bread", "cheese", "butter",
+            "sun", "moon", "star", "sky", "cloud"
     );
 
-    /**
-     * Gibt die gesamte Vokabelliste zurück.
-     * @return Liste aller Vokabeln
-     */
-    public List<String> getVocabelList() {
-        return vocabelList;
-    }
+    private final List<String> vocabGerman = Arrays.asList(
+            "Apfel", "Banane", "Haus", "Auto", "Computer",
+            "Buch", "Stift", "Schule", "Lehrer", "Schüler",
+            "Stuhl", "Tisch", "Fenster", "Tür", "Handy",
+            "Hund", "Katze", "Maus", "Vogel", "Fisch",
+            "Wasser", "Milch", "Brot", "Käse", "Butter",
+            "Sonne", "Mond", "Stern", "Himmel", "Wolke"
+    );
 
-    /**
-     * Gibt die Größe der Vokabelliste zurück.
-     * @return Anzahl der Vokabeln
-     */
-    public int getSize() {
-        return vocabelList.size();
-    }
+        public int getSize() {
+            return vocabEnglish.size();
+        }
 
-    /**
-     * Gibt die Vokabel an der angegebenen Position zurück.
-     * @param index Position in der Liste
-     * @return Vokabel als String
-     */
-    public String get(int index) {
-        return vocabelList.get(index);
+        public String get(int index) {
+            return vocabEnglish.get(index);
+        }
+
+        public String getTranslation(int index) {
+            return vocabGerman.get(index);
+        }
     }
-}
